# flet-todo-app

./: .gitignore  README.md  main.py  pyproject.toml
modules/: task.py  todo.py
